--- a/src/styles.css
+++ b/src/styles.css
@@ -95,7 +95,7 @@ h1.developer {
   margin: 30px auto;
 }
 h3.title {
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 700;
 }
 .web-dev,
@@ -112,22 +112,27 @@ h3.title {
   background-color: rgba(128, 214, 208, 0.8);
 }
 .bg-color {
-  max-width: 600px;
-  max-height: 300px;
+  width: 100%;
+  max-height: 350px;
 }
 .container {
-  display: inline;
-  /*margin-top: 55px;*/
+  margin: 10px;
   padding: 20px;
-  float: left;
+  float: center;
   background-color: #f1f1f1;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+  display: flex;
+  justify-content: center;
+}
+.sample-img {
+  height: auto;
+  max-width: 100%;
 }
 
 h1.work-type {
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 600;
   margin-left: 10px;
   margin-top: 20px;
@@ -199,26 +204,25 @@ p.work-desc {
   }
   .web-dev {
     width: 100%;
-    height: 350px;
+    height: 450px;
   }
   .print-dev {
     width: 100%;
-    height: 350px;
+    height: 450px;
   }
 
   h1.work-type {
-    font-size: 18px;
+    font-size: 20px;
     margin-left: 10px;
     margin-top: 10px;
     /*transform: rotate(-90deg);*/
   }
   .work-title {
-    font-size: 16px;
+    font-size: 18px;
     margin-left: 30px;
     /*transform: rotate(-90deg);*/
   }
   p.work-desc {
-    font-size: 12px;
     margin-top: 0;
     margin-left: 40px;
   }
@@ -226,5 +230,27 @@ p.work-desc {
     margin: 10px 0 0 0;
 
     padding: 10px;
+  }
+}
+@media (max-width: 570px) {
+  .web-dev {
+    margin-top: 50px;
+    width: 100%;
+    height: 350px;
+  }
+  .print-dev {
+    width: 100%;
+    height: 350px;
+  }
+  p.work-desc {
+    font-size: 12px;
+    margin-top: 0;
+    margin-left: 40px;
+  }
+  h1.work-type {
+    font-size: 18px;
+  }
+  .work-title {
+    font-size: 16px;
   }
 }
