--- a/src/styles.css
+++ b/src/styles.css
@@ -154,6 +154,21 @@ p.work-desc {
   font-size: 16px;
 }
 
+.top-line-title {
+  display: block;
+  height: 30px;
+  width: 100%;
+  background-color: #556778;
+  margin-top: 20px;
+}
+.bottom-line-title {
+  display: block;
+  height: 10px;
+  width: 100%;
+  background-color: #cd4589;
+  margin-bottom: 20px;
+}
+
 @media (max-width: 720px) {
   h3.designer,
   h3.developer {
