--- a/src/styles.css
+++ b/src/styles.css
@@ -25,12 +25,12 @@ p {
 }
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  /* padding: 0;
+  margin: 0;*/
 }
 nav {
   background: #cd4589;
-  padding: 5px 20px;
+  padding: 0 15px;
 }
 ul {
   list-style-type: none;
@@ -197,6 +197,10 @@ h1.developer {
   text-decoration: none;
   text-transform: capitalize;
 }
+.contact-link:hover {
+  color: black;
+}
+
 .contact-button {
   display: flex;
   justify-content: center;
@@ -266,6 +270,7 @@ p.bio-highlight {
 .bio-title {
   font-size: 25px;
   font-weight: bold;
+  margin: 20px auto;
 }
 .bio-container {
   margin: 15x;
@@ -326,12 +331,29 @@ p.work-desc {
 }
 .email-link:hover {
   text-decoration: none;
-  color: #a2d9dd;
+  color: black;
 }
 
 footer {
-  margin: 100px auto;
+  margin: 80px auto;
+  padding: 10px;
   background: #a2d9dd;
+}
+
+.social-links a {
+  margin: 0 30px;
+  color: var(--primary-color);
+  padding: 10px 20px;
+  font-size: 35px;
+  background: #fff;
+  border-radius: 50%;
+  transition: all 80ms;
+}
+.social-links a :hover {
+  padding: 10px 20px;
+  background: var(--primary-color);
+  border-radius: 50%;
+  color: #fff;
 }
 
 @media (max-width: 720px) {
@@ -383,14 +405,22 @@ footer {
     font-weight: 700;
   }
   .web-dev {
+    margin-bottom: 5px;
     width: 100%;
     height: 450px;
+  }
+  .large-img {
+    width: 400px;
+    height: 250px;
   }
   .print-dev {
     width: 100%;
     height: 450px;
   }
-
+  .brand-dev {
+    width: 100%;
+    height: 450px;
+  }
   h1.work-type {
     font-size: 20px;
     margin-left: 10px;
@@ -411,19 +441,44 @@ footer {
 
     padding: 10px;
   }
+  .bio-title {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 50px auto;
+  }
+  .about-box {
+    width: 85%;
+    height: 950px;
+    background-color: white;
+  }
+  p.bio {
+    font-size: 16px;
+    text-align: justify;
+  }
+  p.bio-highlight {
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .large-img {
+    width: 300px;
+    height: 225px;
+  }
 }
 @media (max-width: 570px) {
   .web-dev {
-    margin-top: 50px;
     width: 100%;
-    height: 350px;
+    height: 450px;
   }
   .print-dev {
     width: 100%;
-    height: 350px;
+    height: 450px;
+  }
+  .brand-dev {
+    width: 100%;
+    height: 450px;
   }
   p.work-desc {
-    font-size: 12px;
+    font-size: 16px;
     margin-top: 0;
     margin-left: 40px;
   }
@@ -432,5 +487,22 @@ footer {
   }
   .work-title {
     font-size: 16px;
+  }
+  .social-links a {
+    margin: 0 10px;
+    color: var(--primary-color);
+    padding: 10px 16px;
+    font-size: 20px;
+    background: #fff;
+    border-radius: 50%;
+  }
+  .about-box {
+    width: 85%;
+    height: 1150px;
+    background-color: white;
+  }
+  .large-img {
+    width: 200px;
+    height: 125px;
   }
 }
