--- a/src/styles.css
+++ b/src/styles.css
@@ -218,21 +218,21 @@ h3.title {
   display: block;
   margin: 10px auto;
   width: 70%;
-  height: 400px;
 }
 .web-dev {
-  background-color: rgba(221, 217, 73, 0.8);
+  background-color: rgba(221, 217, 73, 0.6);
 }
 .print-dev {
-  background-color: rgba(128, 214, 208, 0.8);
+  background-color: rgba(128, 214, 208, 0.6);
 }
 .brand-dev {
-  background-color: rgba(205, 69, 137, 0.8);
+  background-color: rgba(205, 69, 137, 0.6);
 }
 
-.bg-color {
+/*.bg-color {
   width: 100%;
   max-height: 350px;
+  overflow: auto;
 }
 .container {
   margin: 10px;
@@ -244,16 +244,16 @@ h3.title {
   transform: translateY(-50%);
   display: flex;
   justify-content: center;
-}
-.sample-img {
-  height: auto;
-  max-width: 100%;
+}*/
+.img-sample {
+  width: 98% !important;
 }
 .about-box {
   display: block;
   margin: 10px auto;
   width: 80%;
-  height: 500px;
+  overflow: auto;
+  overflow-x: hidden;
   background-color: white;
 }
 p.bio {
@@ -356,7 +356,7 @@ footer {
   color: #fff;
 }
 
-@media (max-width: 720px) {
+@media (max-width: 768px) {
   h3.designer,
   h3.developer {
     font-size: 30px;
@@ -407,19 +407,16 @@ footer {
   .web-dev {
     margin-bottom: 5px;
     width: 100%;
-    height: 450px;
+    /*height: 450px;*/
   }
-  .large-img {
-    width: 400px;
-    height: 250px;
-  }
+
   .print-dev {
     width: 100%;
-    height: 450px;
+    /*height: 450px;*/
   }
   .brand-dev {
     width: 100%;
-    height: 450px;
+    /*height: 450px;*/
   }
   h1.work-type {
     font-size: 20px;
@@ -436,11 +433,7 @@ footer {
     margin-top: 0;
     margin-left: 40px;
   }
-  .container {
-    margin: 10px 0 0 0;
 
-    padding: 10px;
-  }
   .bio-title {
     font-size: 20px;
     font-weight: bold;
@@ -448,7 +441,6 @@ footer {
   }
   .about-box {
     width: 85%;
-    height: 950px;
     background-color: white;
   }
   p.bio {
@@ -459,23 +451,19 @@ footer {
     font-size: 16px;
     font-weight: bold;
   }
-  .large-img {
-    width: 300px;
-    height: 225px;
-  }
 }
 @media (max-width: 570px) {
   .web-dev {
     width: 100%;
-    height: 450px;
+    /* height: 450px;*/
   }
   .print-dev {
     width: 100%;
-    height: 450px;
+    /*height: 450px;*/
   }
   .brand-dev {
     width: 100%;
-    height: 450px;
+    /*height: 450px;*/
   }
   p.work-desc {
     font-size: 16px;
@@ -498,11 +486,7 @@ footer {
   }
   .about-box {
     width: 85%;
-    height: 1150px;
+
     background-color: white;
-  }
-  .large-img {
-    width: 200px;
-    height: 125px;
   }
 }
