--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ body {
   font-family: "Jura", sans-serif;
 }
 
-h1 {
+h3 {
   font-family: "Spinnaker", sans-serif;
   font-size: 96px;
 }
@@ -16,9 +16,13 @@ h2 {
   font-family: "Spinnaker", sans-serif;
   font-size: 48px;
 }
-h3 {
+h1 {
   font-family: "Jura", sans-serif;
   text-align: center;
+}
+h4 {
+  font-family: "Jura", sans-serif;
+  font-size: 45px;
 }
 p {
   font-size: 18px;
@@ -155,8 +159,8 @@ nav a:hover {
   color: #fff;
   padding-left: 20px;
 }
-h3.designer,
-h3.developer {
+h1.designer,
+h1.developer {
   font-size: 70px;
   margin-top: 250px;
   font-weight: 700;
@@ -166,8 +170,8 @@ h2.developer {
   font-size: 70px;
   margin-top: 120px;
 }
-h1.designer,
-h1.developer {
+h3.designer,
+h3.developer {
   font-size: 45px;
   margin-top: 10px;
 }
@@ -208,7 +212,7 @@ h1.developer {
 .title {
   margin: 30px auto;
 }
-h3.title {
+h1.title {
   font-size: 40px;
   font-weight: 700;
 }
@@ -229,22 +233,6 @@ h3.title {
   background-color: rgba(205, 69, 137, 0.6);
 }
 
-/*.bg-color {
-  width: 100%;
-  max-height: 350px;
-  overflow: auto;
-}
-.container {
-  margin: 10px;
-  padding: 20px;
-  float: center;
-  background-color: #f1f1f1;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  display: flex;
-  justify-content: center;
-}*/
 .img-sample {
   width: 98% !important;
 }
@@ -284,7 +272,7 @@ p.bio-highlight {
   justify-content: center;
 }
 
-h1.work-type {
+h3.work-type {
   font-size: 20px;
   font-weight: 600;
   margin-left: 10px;
@@ -355,10 +343,43 @@ footer {
   border-radius: 50%;
   color: #fff;
 }
+.tools {
+  display: inline-block;
+}
 
+.card {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+}
+
+.collapse.show {
+  display: block;
+}
+.collapse {
+  display: none;
+}
+
+.card-body {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1.25rem;
+}
 @media (max-width: 768px) {
-  h3.designer,
-  h3.developer {
+  h1.designer,
+  h1.developer {
     font-size: 30px;
     margin-top: 180px;
     font-weight: 700;
@@ -371,8 +392,8 @@ footer {
     font-size: 50px;
     margin-top: 30px;
   }
-  h1.designer,
-  h1.developer {
+  h3.designer,
+  h3.developer {
     font-size: 38px;
     margin-top: 10px;
   }
@@ -400,7 +421,7 @@ footer {
     padding: 15px 30px;
   }
 
-  h3.title {
+  h1.title {
     font-size: 35px;
     font-weight: 700;
   }
@@ -418,7 +439,7 @@ footer {
     width: 100%;
     /*height: 450px;*/
   }
-  h1.work-type {
+  h3.work-type {
     font-size: 20px;
     margin-left: 10px;
     margin-top: 10px;
@@ -470,7 +491,7 @@ footer {
     margin-top: 0;
     margin-left: 40px;
   }
-  h1.work-type {
+  h3.work-type {
     font-size: 18px;
   }
   .work-title {
