--- a/src/styles.css
+++ b/src/styles.css
@@ -63,6 +63,10 @@ nav a:hover {
 .logo a {
   font-size: 20px;
 }
+#navbarDropdown {
+  color: white;
+  text-decoration: none;
+}
 
 /* mobile menu*/
 
