--- a/src/styles.css
+++ b/src/styles.css
@@ -258,6 +258,12 @@ p.bio-highlight {
   font-weight: bold;
   font-family: "Jura", sans-serif;
 }
+li.bio-list {
+  font-size: 16px;
+  text-align: justify;
+  font-family: "Jura", sans-serif;
+  font-weight: 600;
+}
 .profile {
   max-height: 250px;
 }
@@ -654,4 +660,34 @@ footer {
 }
 .mascot {
   max-height: 60%;
+}
+.testimonials {
+  background-color: #ddd949;
+  padding: 30px;
+  margin: 0 auto;
+  min-width: 100%;
+}
+.testimonial-title {
+  text-align: center;
+}
+.testimonial-content {
+  background-color: #fff;
+  max-width: 80%;
+  margin: 10px auto;
+  padding: 20px;
+}
+.btn-primary,
+.btn-primary:active,
+.btn-primary:visited {
+  background: var(--secondary-color) !important;
+  box-shadow: var(--box-shadow) !important;
+  color: var(--primary-color) !important;
+  font-size: 20px !important;
+  font-weight: 600 !important;
+  padding: 15px 60px !important;
+  border-style: none !important;
+  font-family: "Jura", sans-serif !important;
+}
+.btn-primary:hover {
+  color: black !important;
 }
