--- a/src/styles.css
+++ b/src/styles.css
@@ -691,3 +691,18 @@ footer {
 .btn-primary:hover {
   color: black !important;
 }
+.work-button {
+  border-radius: 4px;
+  padding: 15px 60px;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+.work-button a {
+  display: flex;
+  justify-content: center;
+  margin: auto 10px;
+  border-radius: 4px;
+  padding: 15px 60px;
+  text-decoration: none;
+  text-transform: capitalize;
+}
