added responsive design to all pages

--- a/src/styles.css
+++ b/src/styles.css
@@ -54,7 +54,11 @@ nav a:hover {
   color: white;
   text-decoration: underline;
 }
-
+footer {
+  margin: 15px auto;
+  padding: 15px;
+  background: #cd4589;
+}
 .menu li {
   font-size: 18px;
   padding: 15px 5px;
@@ -192,6 +196,7 @@ nav a:hover {
   background: var(--secondary-color);
   box-shadow: var(--box-shadow);
   color: var(--primary-color);
+  border: none;
   font-size: 20px;
   font-weight: 600;
 }
@@ -202,6 +207,14 @@ nav a:hover {
   text-decoration: none;
   text-transform: capitalize;
 }
+.contact-button button {
+  margin: 10px;
+  border-radius: 4px;
+  padding: 15px 60px;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
 .contact-link:hover {
   color: black;
 }
@@ -209,6 +222,7 @@ nav a:hover {
 .contact-button {
   display: flex;
   justify-content: left;
+
 }
 .title {
   margin: 30px auto;
@@ -304,6 +318,7 @@ h3.work-type {
 p.work-desc {
   margin-top: 40px;
   margin-left: 50px;
+  
   font-size: 16px;
   font-family: "Jura", sans-serif;
 }
@@ -340,11 +355,7 @@ p.work-desc {
   color: white;
   font-family: "Jura", sans-serif;
 }
-footer {
-  margin: 15px auto;
-  padding: 15px;
-  background: #cd4589;
-}
+
 
 #terms {
   text-align: center;
@@ -421,6 +432,150 @@ footer {
   font-family: "Jura", sans-serif;
 }
 
+
+.creative-services {
+  background-color: #556778;
+  color: white;
+  font-size: 22px;
+  padding: 80px;
+  margin: 0 auto;
+  min-width: 100%;
+  font-family: "Jura", sans-serif;
+  font-weight: bold;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.creative-services a {
+  text-decoration: none;
+  color: white;
+  text-align: center;
+}
+
+.creative-services a:hover {
+  text-decoration: underline;
+  color: white;
+}
+
+.service-icon {
+justify-content: center;
+  margin: 20px auto;
+}
+
+.service-image {
+  display: block;
+  max-height: 300px;
+}
+
+.web-intro {
+  display: block;
+  padding-top: 40px;
+  padding-bottom: 10px;
+  color: black;
+}
+
+.website-title {
+  font-size: 50px;
+  text-align: center;
+  padding-top: 40px;
+}
+
+.intro-services {
+  background-color: #cd4589;
+  color: white;
+  font-size: 22px;
+  padding: 30px;
+  margin: 0 auto;
+  min-width: 100%;
+  font-family: "Jura", sans-serif;
+  font-weight: bold;
+}
+
+.intro-services a {
+  text-decoration: none;
+  color: white;
+  text-align: left;
+  display: block;
+  padding: 20px 10px;
+}
+
+.intro-services a:hover {
+  text-decoration: underline;
+  color: white;
+}
+
+.mascot {
+  max-height: 350px;
+}
+
+.testimonials {
+  background-color: #ddd949;
+  padding: 30px;
+  margin: 0 auto;
+  min-width: 100%;
+}
+
+.testimonial-title {
+  text-align: center;
+}
+
+.testimonial-content {
+  background-color: #fff;
+  max-width: 80%;
+  margin: 10px auto;
+  padding: 20px;
+}
+
+.btn-primary,
+.btn-primary:active,
+.btn-primary:visited {
+  background: var(--secondary-color) !important;
+  box-shadow: var(--box-shadow) !important;
+  color: var(--primary-color) !important;
+  font-size: 20px !important;
+  font-weight: 600 !important;
+  padding: 15px 60px !important;
+  border-style: none !important;
+  font-family: "Jura", sans-serif !important;
+}
+
+.btn-primary:hover {
+  color: black !important;
+}
+
+.work-button {
+  border-radius: 4px;
+  padding: 15px 60px;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.work-button a {
+  display: flex;
+  justify-content: center;
+  margin: auto 10px;
+  border-radius: 4px;
+  padding: 15px 60px;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.terms {
+  margin: 0 auto;
+  padding: 0 40px 0 40px;
+}
+
+.logofooter {
+  padding: 0 20px;
+}
+/*Media queries for small and medium screens*/
+@media (min-width: 992px){
+
+
+
+}
+
 @media (max-width: 768px) {
   h1.designer,
   h1.developer {
@@ -461,17 +616,48 @@ footer {
   li {
     font-size: 14px;
   }
+  .title {
+      margin: 20px auto;
+      padding-left: 10px;
+    }
   .contact-link {
-    font-size: 15px;
+    font-size: 16px;
   }
   .contact-button a {
     padding: 15px 30px;
   }
-
+ .contact-button button {
+   padding: 15px 30px;
+ }
+ .contact-button {
+   display: flex;
+   justify-content: center;
+ }
+ .website-title {
+   font-size: 45px;
+   text-align: left;
+   padding-top: 10px;
+ }
   h1.title {
     font-size: 35px;
     font-weight: 700;
   }
+  p.bio-highlight {
+      font-size: 15px;
+    } 
+    p.bio {
+      font-size: 14px;
+      padding: 10px;
+    }
+li.bio-list {
+      font-size: 15px;
+  padding-right:10px;
+}
+.web-intro {
+  display: block;
+  padding: 40px 10px 10px 10px;
+
+}
   .web-dev {
     margin-bottom: 5px;
     width: 100%;
@@ -500,6 +686,7 @@ footer {
   p.work-desc {
     margin-top: 0;
     margin-left: 40px;
+    margin-right: 10px;
   }
 
   .bio-title {
@@ -512,12 +699,11 @@ footer {
     background-color: white;
   }
   p.bio {
-    font-size: 16px;
+    font-size: 15px;
     text-align: justify;
   }
   p.bio-highlight {
     font-size: 16px;
-    font-weight: bold;
   }
   .img-tech {
     display: block;
@@ -533,9 +719,28 @@ footer {
   .service-intro {
     font-size: 16px;
   }
+ .intro-services {  
+   font-size: 18px;  
+    }
+  .service-image {
+   display: block;
+   max-height: 300px;
+   margin: 0 auto;
+  }
+  .service-icon {
+  justify-content: center;
+  margin-top: 0;
+  max-height: 60px;
+  }
+
+.creative-services {
+   
+      font-size: 18px;
+    padding: 20px;
+    }
   .email-footer {
     display: block;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
     text-align: left;
     color: white;
@@ -546,6 +751,10 @@ footer {
     margin: 0 auto;
     padding: 0;
   }
+
+    .mascot {
+        scale:60%;
+    }
 }
 @media (max-width: 570px) {
   .web-dev {
@@ -598,122 +807,24 @@ footer {
   .service-intro {
     font-size: 14px;
   }
+ .intro-services {
+ font-size: 14px;
+     }
+  .service-icon {
+  justify-content: center;
+  margin-top: 0;
+  max-height: 40px;
+ }
+ .creative-services {
+
+   font-size: 14px;
+
+ }
   .title {
     font-size: 20px;
   }
-}
-.creative-services {
-  background-color: #556778;
-  color: white;
-  font-size: 26px;
-  padding: 80px;
-  margin: 0 auto;
-  min-width: 100%;
-  font-family: "Jura", sans-serif;
-  font-weight: bold;
-}
-
-.creative-services a {
-  text-decoration: none;
-  color: white;
-  text-align: center;
-}
-.creative-services a:hover {
-  text-decoration: underline;
-  color: white;
-}
-.service-icon {
-  float: right;
-  margin-top: 0 auto;
-}
-.service-image {
-  display: block;
-  max-height: 80%;
-}
-.web-intro {
-  display: block;
-  padding-top: 40px;
-  padding-bottom: 10px;
-  color: black;
-}
-.website-title {
-  font-size: 50px;
-  text-align: center;
-  padding-top: 40px;
-}
-.intro-services {
-  background-color: #cd4589;
-  color: white;
-  font-size: 26px;
-  padding: 30px;
-  margin: 0 auto;
-  min-width: 100%;
-  font-family: "Jura", sans-serif;
-  font-weight: bold;
-}
-.intro-services a {
-  text-decoration: none;
-  color: white;
-  text-align: left;
-  display: block;
-  padding: 20px 10px;
-}
-.intro-services a:hover {
-  text-decoration: underline;
-  color: white;
-}
-.mascot {
-  max-height: 60%;
-}
-.testimonials {
-  background-color: #ddd949;
-  padding: 30px;
-  margin: 0 auto;
-  min-width: 100%;
-}
-.testimonial-title {
-  text-align: center;
-}
-.testimonial-content {
-  background-color: #fff;
-  max-width: 80%;
-  margin: 10px auto;
-  padding: 20px;
-}
-.btn-primary,
-.btn-primary:active,
-.btn-primary:visited {
-  background: var(--secondary-color) !important;
-  box-shadow: var(--box-shadow) !important;
-  color: var(--primary-color) !important;
-  font-size: 20px !important;
-  font-weight: 600 !important;
-  padding: 15px 60px !important;
-  border-style: none !important;
-  font-family: "Jura", sans-serif !important;
-}
-.btn-primary:hover {
-  color: black !important;
-}
-.work-button {
-  border-radius: 4px;
-  padding: 15px 60px;
-  text-decoration: none;
-  text-transform: capitalize;
-}
-.work-button a {
-  display: flex;
-  justify-content: center;
-  margin: auto 10px;
-  border-radius: 4px;
-  padding: 15px 60px;
-  text-decoration: none;
-  text-transform: capitalize;
-}
-.terms {
-  margin: 0 auto;
-  padding: 0 40px 0 40px;
-}
-.logofooter {
-  padding: 0 20px;
-}
+  #terms{
+    font-size: 14px;
+  }
+   
+ }
