--- a/src/styles.css
+++ b/src/styles.css
@@ -228,6 +228,10 @@ footer {
   margin: 30px auto;
   padding-left: 80px;
 }
+h2.title {
+  font-size: 40px;
+  font-weight: 700;
+}
 h1.title {
   font-size: 40px;
   font-weight: 700;
@@ -647,6 +651,10 @@ justify-content: center;
     font-size: 35px;
     font-weight: 700;
   }
+    h2.title {
+      font-size: 35px;
+      font-weight: 700;
+    }
   p.bio-highlight {
       font-size: 15px;
     } 
